# Parrot-TV-M3U

./: .breakpoints  .gitignore  .replit  .~lock.bot.sh#  Backup.m3u  Czechoslovaia.m3u  Czechoslovakia.m3u  English.m3u  Main.m3u  README.md  autorun.sh  bot.py  bot.sh  dailyiptvlist.py  discord.py  discordOLD.py  doc.py  epg.xml  keep_alive.py  make.py  me.txt  my_list.iptvcat.com.m3u8  playlist.m3u  pyproject.toml  requirements.txt  service.py  service.sh  setup.py
Assets/: USTVGO.txt  color.py
Assets/Admin/: Slist.txt  list.txt  log.uid  neofetch.parrot  url.txt  url.txt.bak
Assets/ChangeIcons/: data.txt  replace.txt
Assets/Channels/: CZ Channels.m3u  DE Channels.m3u  Futurama.m3u  Imdb.m3u  Movies.m3u  Plex.m3u  RO Channels.m3u  RedBox.m3u  Roku.m3u  SK Channels.m3u  Samsung.m3u  Tubi.m3u  Vizio.m3u  playlist.m3u  teleup.m3u  ustvgo.m3u  ustvgopriv.m3u  xumoTV.m3u
Assets/IMG/: Images.txt
Assets/Private/: Private.m3u
Assets/Replace/: data.txt  find.txt  out.txt  replace.txt
Assets/Service/: f.txt  tt.txt
Backup/: Backup 2.m3u  Backup DE.m3u  Czechoslovaia.m3u  English.m3u  Main.m3u  PlayList-1629969958-M3U-236.m3u  UK Backup.m3u  US Channels.m3u  cz-m3uplaylist-2021-08-28-1.m3u  iptvcat.m3u
Beta/: English.m3u  Main.m3u
EPG/: merge.py  xml_merge.py
IMG/: my_list.iptvcat.com(1).m3u8
IPTV Cat/: my_list.iptvcat.com.m3u8
Original/: CS.m3u  Main.m3u  README.md
cogs/: announce.py  autoupdate.py  ban.py  db.py  help.py  kick.py  memes.py  mute.py  others.py  send.py  temp.py  troll.py  warn.py
memes/: memes.txt
web/: style.css  web.html
(+46 files in other folders)
