[tool.poetry]
name = "repl_python3_beta_Parrot-TV-M3U"
version = "0.1.0"
description = ""
authors = ["ParrotDeveloper <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
tqdm = "^4.62.3"
"pushbullet.py" = "^0.12.0"
pytz = "^2021.3"
requests = "^2.26.0"
socks = "^0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
